# sso-entitlements-manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  makefile  output.yaml  pyproject.toml  sso-manager.spec  test.py  test.txt
.github/workflows/: linting.yaml  release.yaml  release.yml  scanning.yaml  testing.yaml
cfn/params/: main.json
cfn/templates/: app-config.yaml  cwl.yaml  kms.yaml  lambda.yaml  main.yaml  s3.yaml
docs/: sso_resolver.drawio
docs/services/aws/: aws_organizations_manager.plantuml
logging/configs/: config.json
src/: build.toml  main.py  template.yaml
src/app/: index.py  requirements.txt
src/app/core/: constants.py
src/app/lib/: access_control_resolver.py  access_control_resolver_v2.py  access_manifest_file_reader.py  access_manifest_reader.py  aws_access_control_resolver.py  aws_identity_center_manager.py  aws_identity_center_mapper.py  aws_identitycentre.py  aws_organizations.py  aws_organizations_mapper.py  aws_sso_resolver.py  cfn_executor.py  identity_center_mapper.py  ou_accounts_mapper.py  ous_accounts_mapper.py  utils.py
src/app/schemas/: manifest_schema_definition.json
src/app/services/: access_manifest_file_reader.py  aws_identity_center_manager.py
src/cli/: sso.py
src/core/: access_control_file_reader.py  constants.py  custom_classes.py  logger.py  utils.py  version.py
src/services/: access_manifest_file_reader.py  aws_identity_center_manager.py  aws_organizations_mapper.py
src/services/aws/: access_control_resolver.py  access_manifest_file_reader.py  aws_identity_center_manager.py  aws_identity_centre_manager.py  aws_organizations_manager.py  exceptions.py  organizations_mapper.py  sso_admin_manager.py  sso_admin_mapper.py  utils.py
tests/: conftest.py  utils.py
tests/configs/manifests/: multiple_rules_invalid_rules_access_type.yaml  multiple_rules_invalid_rules_target_type.yaml  multiple_rules_missing_principal_name.yaml  multiple_rules_valid.yaml  single_rule_invalid_principal_type.yaml  single_rule_missing_principal_name.yaml
tests/configs/manifests/invalid/: multiple_rules_invalid_rule_type.yaml  multiple_rules_invalid_rules_type.yaml  single_rule_missing_permission_set_name.yaml
tests/configs/manifests/invalid_schema/: multiple_rules_invalid_access_type.yaml  multiple_rules_invalid_access_type_datatype.yaml  multiple_rules_invalid_permission_set_name_datatype.yaml  multiple_rules_invalid_principal_name_datatype.yaml  multiple_rules_invalid_principal_type.yaml  multiple_rules_invalid_principal_type_datatype.yaml  multiple_rules_invalid_rule_type.yaml  multiple_rules_invalid_rule_type_datatype.yaml  (+16 more)
tests/configs/organizations/: aws_org_1.json  aws_org_2.json
tests/integration/: test_cli.py  test_index.py
tests/manifests/invalid_schema/: multiple_rules_invalid_principal_type.yaml  multiple_rules_invalid_rule_type_datatype.yaml  multiple_rules_invalid_target_type.yaml  single_rule_invalid_rule_type.yaml  single_rule_invalid_target_type.yaml  single_rule_missing_permission_set_name.yaml  single_rule_missing_principal_name.yaml
tests/manifests/valid_schema/: multiple_rules_invalid_all_accounts.yaml  multiple_rules_invalid_all_ous.yaml  multiple_rules_invalid_some_accounts.yaml  multiple_rules_invalid_some_permission_sets_diff_2.yaml  multiple_rules_valid_diff_2.yaml
tests/unit/: test_access_control_file_reader.py  test_access_control_resolver.py  test_aws_identity_center_manager.py  test_aws_identity_centre_manager.py  test_identity_center_manager.py  test_identity_center_mapper.py  test_identitycentre.py  test_index.py  test_main.py  test_manifest_reader.py  test_manifests.py  test_organizations.py  test_organizations_manager.py  test_organizations_mapper.py  test_ous_accounts_mapper.py  test_sso_admin_manager.py  test_sso_admin_mapper.py  test_sso_resolver.py  test_utils.py  utils.py
tools/: sam_build.sh  sam_clean.sh  update_params.sh
(+13 files in other folders)
