[tool.poetry]
name = "sso_manager"
version = "0.1.0"
description = "A CLI tool to allow sys admins to programatically manager and broker access to SSO principals."
authors = ["Islam Elkadi <ielkadi@icloud.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
jsonschema = "4.23.0"
PyYAML = "6.0.2"
rich = "14.0.0"
boto3 = "1.37.31"
mypy-boto3-sso-admin = "1.37.0"
mypy-boto3-organizations = "1.37.0"
mypy-boto3-identitystore = "1.37.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.2.0"
pyclean = "3.1.0"
moto = "5.1.3"
pytest = "8.3.5"
pytest-xdist = "3.6.1"
pytest-cov = "6.1.1"
pylint = "3.3.6"
black = "25.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra -q -p no:warnings"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
